# SpatialAIFlow

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  COMPATIBILITY_REPORT.md  CONTRIBUTING.md  DEMO_REPORT.md  LICENSE  Makefile  README.md  RELEASE_READINESS.md  environment.yml  pyproject.toml  requirements.txt  walkthrough.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: conf.py
examples/: quickstart.py
notebooks/: SpatialAIFlow.ipynb
scripts/: execute_and_extract_figures.py  generate_notebook.py
src/spatialaiflow/: __init__.py
src/spatialaiflow/analysis/: __init__.py  clustering.py  markers.py  nmf.py  spatial_stats.py
src/spatialaiflow/annotation/: __init__.py  automated.py  manual.py
src/spatialaiflow/communication/: __init__.py  liana_runner.py
src/spatialaiflow/imaging/: __init__.py  features.py
src/spatialaiflow/io/: __init__.py  data_loader.py
src/spatialaiflow/ml/: __init__.py  classifiers.py  tangram_deconv.py
src/spatialaiflow/preprocessing/: __init__.py  dim_reduction.py  normalization.py  qc.py
src/spatialaiflow/utils/: __init__.py  exceptions.py  logger.py  matrix.py  validation.py
tests/: __init__.py  conftest.py  test_analysis.py  test_io.py  test_preprocessing.py
