[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# ==============================================================================
# Project metadata — PEP 621
# ==============================================================================
[project]
name = "spatialaiflow"
version = "0.1.0"
description = "Reproducible, end-to-end spatial transcriptomics analysis pipeline built on the Scanpy/Squidpy ecosystem."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = [
    "spatial-transcriptomics",
    "bioinformatics",
    "single-cell",
    "scanpy",
    "squidpy",
    "visium",
    "computational-biology",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]
# authors = [
#     { name = "TODO", email = "TODO" },
# ]

# --- Core runtime dependencies ---
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "matplotlib>=3.6",
    "anndata>=0.9",
    "scanpy>=1.9",
    "squidpy>=1.3",
]

# --- Optional dependency groups ---
[project.optional-dependencies]
# Section-specific analysis tools
communication = ["liana>=0.1"]
enrichment = ["gseapy>=1.0"]
annotation = ["celltypist>=1.5"]
deconvolution = ["tangram-sc>=1.0"]
ml = ["scikit-learn>=1.2", "joblib>=1.2"]

# All optional analysis dependencies
all = [
    "spatialaiflow[communication]",
    "spatialaiflow[enrichment]",
    "spatialaiflow[annotation]",
    "spatialaiflow[deconvolution]",
    "spatialaiflow[ml]",
]

# Development tools
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.5",
    "pre-commit>=3.0",
    "tox>=4.0",
]

# Documentation
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-autodoc-typehints>=1.24",
    "nbsphinx>=0.9",
]

[project.urls]
Homepage = "https://github.com/SpatialAIFlow/SpatialAIFlow"
Documentation = "https://spatialaiflow.readthedocs.io"
Repository = "https://github.com/SpatialAIFlow/SpatialAIFlow"
Issues = "https://github.com/SpatialAIFlow/SpatialAIFlow/issues"
Changelog = "https://github.com/SpatialAIFlow/SpatialAIFlow/blob/main/CHANGELOG.md"

# ==============================================================================
# Build configuration — Hatchling
# ==============================================================================
[tool.hatch.build.targets.wheel]
packages = ["src/spatialaiflow"]

# ==============================================================================
# Ruff — linting & formatting
# ==============================================================================
[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["spatialaiflow"]

# ==============================================================================
# mypy — static type checking
# ==============================================================================
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false          # relaxed for early development
ignore_missing_imports = true

# ==============================================================================
# pytest
# ==============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external data",
]

# ==============================================================================
# coverage
# ==============================================================================
[tool.coverage.run]
source = ["spatialaiflow"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
]
